--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
         <div class="col-xs-12 col-sm-8">
             <div class="box">
                 <h2>Notre idée :</h2>
-                <p></p>
+                <p>[Nom d'application] est une application destinée au partage de ces voyage. L’idée est de diffuser toutes les étapes de son voyage (photos, articles, vidéos), via une carte retraçant tout son parcours (position GPS).</p>
+                <p>Nous utiliserions l’API de MapBox afin de réaliser un relevé des lieux visités et traversés par l’utilisateur et les répertoriés sur une carte.</p>
+                <p>L’utilisateur pourrait également préparer son voyage (carte, rappels, produits utiles / indispensables proposés).</p>
+                <p>Nous allons également intégrer un côté communautaire, l’idée serait de pouvoir suivre des personnes (follow de différents comptes), rejoindre des personnes (groupe, proposition de “meet-up” …) et de permettre aux utilisateurs de gérer tout ceci de façon simple (compte privé permettant de partager son voyage uniquement avec quelques personnes ou compte public).</p>
+                <p>On pourra créer des groupes, ceux-ci permettront d’inclure différentes personnes dans notre voyage.</p>
             </div>
         </div>
     </div>
