--- a/index.html
+++ b/index.html
@@ -49,6 +49,23 @@
             </div>
         </div>
     </div>
+
+    <div class="row center-xs">
+        <div class="col-xs-12 col-sm-8">
+            <div class="box">
+                <h2>Analyse de la concurrence</h2>
+                <p>Les principaux concurrents sont :</p>
+                <ul>
+                    <li><a href="https://www.polarsteps.com/">Polarsteps</a></li>
+                    <li><a href="https://findpenguins.com/">Find Penguins</a></li>
+                </ul>
+                <p>Nous avons également des concurrents indirects :</p>
+                <ul>
+                    <li><a href="https://get.google.com/trips/">Google Trips</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
