--- a/index.html
+++ b/index.html
@@ -63,9 +63,115 @@
                 <ul>
                     <li><a href="https://get.google.com/trips/">Google Trips</a></li>
                 </ul>
+                <h2>Analyse en détail de PolarSteps, concurrent principal</h2>
+                <p>Fonctionalités :</p>
+                <ul>
+                    <li>Possibilité de suivre des personnes</li>
+                    <li>Possibilité de partager le voyage des autres</li>
+                    <li>On suit le voyage d’une personne avec une timeline</li>
+                    <li>On peut liker ou/et commenter une étape</li>
+                    <li>Création de livre souvenir</li>
+                    <li>Suivi localisation sans internet</li>
+                </ul>
+                <p>Informations globales à propos du voyage :</p>
+                <ul>
+                    <li>Pays traversés</li>
+                    <li>Nombre de vues du voyage</li>
+                    <li>Likes</li>
+                    <li>Durée du voyage</li>
+                    <li>Nombre de photos</li>
+                    <li>Nombre d’étapes</li>
+                    <li>Nombres de jour entre 2 étapes</li>
+                </ul>
+                <p>Informations à propos d'une étape</p>
+                <ul>
+                    <li>Lieu</li>
+                    <li>Pays</li>
+                    <li>Date</li>
+                    <li>Météo</li>
+                    <li>Description</li>
+                    <li>Photo(s)</li>
+                </ul>
             </div>
         </div>
     </div>
+
+    <div class="row center-xs">
+        <div class="col-xs-12 col-sm-8">
+            <div class="box">
+                <h2>Version 0 :</h2>
+                <ul>
+                    <li>Créer un voyage :
+                        <ul>
+                            <li>Titre et description du voyage</li>
+                            <li>Date de début du voyage</li>
+                            <li>Temps passé sur le voyage</li>
+                            <li>Publication de photo(s) et d'article(s) => Etape avec localisation GPS</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Créer un profil :
+                        <ul>
+                            <li>Pseudo & Nom, Prénom</li>
+                            <li>Photo</li>
+                            <li>Age</li>
+                            <li>Bio (Optionnel)</li>
+                            <li>Nombres de voyages réalisé (en fonction des données déjà présentes pour l'utilisateur)</li>
+                            <li>Titre du voyage en cours (si voyage en cours)</li>
+                            <li>Personnes suivies</li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <h3>[versions futures / à approfondir]</h3>
+
+                <h3>V1 :</h3>
+                <ul>
+                    <li>Tracé GPS en temps réel</li>
+                    <li>Mode privé & mode publique</li>
+                    <li>Mode groupe (ex: sortie scolaire)</li>
+                </ul>
+
+                <h3>V2 :</h3>
+                <ul>
+                    <li>Mode discover</li>
+                </ul>
+                
+            </div>
+        </div>
+    </div>
+
+    <div class="row center-xs">
+            <div class="col-xs-12 col-sm-8">
+                <div class="box">
+                    <h2>Quelques idées en vrac :</h2>
+
+                    <h3>Tech :</h3>
+                    <ul>
+                        <li>API :</li>
+                        <ul>
+                            <li>Mapbox</li>
+                            <li>Instagram</li>
+                            <li>Flickr</li>
+                        </ul>
+                        <li>Développement :</li>
+                        <ul>
+                            <li>C#</li>
+                            <li>Framework Xamarin (multi-plateforme)</li>
+                        </ul>
+                    </ul>
+
+                    <h3>Business Model :</h3>
+                    <ul>
+                        <li>Vente de livre retraçant le voyage</li>
+                        <li>Vente d’objet lié aux voyages (lien affilié)</li>
+                        <li>Compte premium</li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
     
 </body>
 </html>
