--- a/index.html
+++ b/index.html
@@ -1,177 +1,212 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Follow my trip - Projet TUT</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
-    <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:200|Nunito+Sans" rel="stylesheet"> 
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Follow my trip - Projet TUT</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:200|Nunito+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <h1>Follow my trip</h1>
-    <div class="row center-xs">
-        <div class="col-xs-12 col-sm-8">
-            <div class="box">
-                <h2>Notre équipe :</h2>
-                <div class="row team">
-                    <div class="col-xs-6 col-sm-3">
-                        <img src="img/adrien.jpg" alt="">
-                        <p>Adrien Sanuy-Munoz</p>
-                    </div>
-                    <div class="col-xs-6 col-sm-3">
-                        <img src="img/lucas.jpg" alt="">
-                        <p>Lucas Duval</p>
-                    </div>
-                    <div class="col-xs-6 col-sm-3">
-                        <img src="img/steven.jpg" alt="">
-                        <p>Steven Roussel</p>
-                    </div>
-                    <div class="col-xs-6 col-sm-3">
-                        <img src="img/pierre.jpg" alt="">
-                        <p>Pierre Moinet</p>
-                    </div>
-                </div>
-            </div>
+  <h1>Follow my trip</h1>
+  <div class="row center-xs">
+    <div class="col-xs-12 col-sm-8">
+      <div class="box">
+        <h2>Notre équipe :</h2>
+        <div class="row team">
+          <div class="col-xs-6 col-sm-3">
+            <img src="img/adrien.jpg" alt="">
+            <p>Adrien Sanuy-Munoz</p>
+          </div>
+          <div class="col-xs-6 col-sm-3">
+            <img src="img/lucas.jpg" alt="">
+            <p>Lucas Duval</p>
+          </div>
+          <div class="col-xs-6 col-sm-3">
+            <img src="img/steven.jpg" alt="">
+            <p>Steven Roussel</p>
+          </div>
+          <div class="col-xs-6 col-sm-3">
+            <img src="img/pierre.jpg" alt="">
+            <p>Pierre Moinet</p>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 
-    <div class="row center-xs">
-        <div class="col-xs-12 col-sm-8">
-            <div class="box">
-                <h2>Notre idée :</h2>
-                <p>[Nom d'application] est une application destinée au partage de ces voyage. L’idée est de diffuser toutes les étapes de son voyage (photos, articles, vidéos), via une carte retraçant tout son parcours (position GPS).</p>
-                <p>Nous utiliserions l’API de MapBox afin de réaliser un relevé des lieux visités et traversés par l’utilisateur et les répertoriés sur une carte.</p>
-                <p>L’utilisateur pourrait également préparer son voyage (carte, rappels, produits utiles / indispensables proposés).</p>
-                <p>Nous allons également intégrer un côté communautaire, l’idée serait de pouvoir suivre des personnes (follow de différents comptes), rejoindre des personnes (groupe, proposition de “meet-up” …) et de permettre aux utilisateurs de gérer tout ceci de façon simple (compte privé permettant de partager son voyage uniquement avec quelques personnes ou compte public).</p>
-                <p>On pourra créer des groupes, ceux-ci permettront d’inclure différentes personnes dans notre voyage.</p>
-            </div>
-        </div>
+  <div class="row center-xs">
+    <div class="col-xs-12 col-sm-8">
+      <div class="box">
+        <h2>Notre idée :</h2>
+        <p>GeoTrip est une application destinée au partage de ces voyage. L’idée est de diffuser toutes les étapes de son voyage (photos, articles, vidéos), via une carte retraçant tout son parcours (position GPS).</p>
+        <p>Nous utiliserions l’API de MapBox afin de réaliser un relevé des lieux visités et traversés par l’utilisateur et les répertoriés sur une carte.</p>
+        <p>L’utilisateur pourrait également préparer son voyage (carte, rappels, produits utiles / indispensables proposés).</p>
+        <p>Nous allons également intégrer un côté communautaire, l’idée serait de pouvoir suivre des personnes (follow de différents comptes), rejoindre des personnes (groupe, proposition de “meet-up” …) et de permettre aux utilisateurs de gérer
+          tout ceci de façon simple (compte privé permettant de partager son voyage uniquement avec quelques personnes ou compte public).</p>
+        <p>On pourra créer des groupes, ceux-ci permettront d’inclure différentes personnes dans notre voyage.</p>
+      </div>
     </div>
+  </div>
 
-    <div class="row center-xs">
-        <div class="col-xs-12 col-sm-8">
-            <div class="box">
-                <h2>Analyse de la concurrence</h2>
-                <p>Les principaux concurrents sont :</p>
-                <ul>
-                    <li><a href="https://www.polarsteps.com/">Polarsteps</a></li>
-                    <li><a href="https://findpenguins.com/">Find Penguins</a></li>
-                </ul>
-                <p>Nous avons également des concurrents indirects :</p>
-                <ul>
-                    <li><a href="https://get.google.com/trips/">Google Trips</a></li>
-                </ul>
-                <h2>Analyse en détail de PolarSteps, concurrent principal</h2>
-                <p>Fonctionalités :</p>
-                <ul>
-                    <li>Possibilité de suivre des personnes</li>
-                    <li>Possibilité de partager le voyage des autres</li>
-                    <li>On suit le voyage d’une personne avec une timeline</li>
-                    <li>On peut liker ou/et commenter une étape</li>
-                    <li>Création de livre souvenir</li>
-                    <li>Suivi localisation sans internet</li>
-                </ul>
-                <p>Informations globales à propos du voyage :</p>
-                <ul>
-                    <li>Pays traversés</li>
-                    <li>Nombre de vues du voyage</li>
-                    <li>Likes</li>
-                    <li>Durée du voyage</li>
-                    <li>Nombre de photos</li>
-                    <li>Nombre d’étapes</li>
-                    <li>Nombres de jour entre 2 étapes</li>
-                </ul>
-                <p>Informations à propos d'une étape</p>
-                <ul>
-                    <li>Lieu</li>
-                    <li>Pays</li>
-                    <li>Date</li>
-                    <li>Météo</li>
-                    <li>Description</li>
-                    <li>Photo(s)</li>
-                </ul>
-            </div>
-        </div>
+  <div class="row center-xs">
+    <div class="col-xs-12 col-sm-8">
+      <div class="box">
+        <h2>Analyse de la concurrence</h2>
+        <p>Les principaux concurrents sont :</p>
+        <ul>
+          <li><a href="https://www.polarsteps.com/">Polarsteps</a></li>
+          <li><a href="https://findpenguins.com/">Find Penguins</a></li>
+        </ul>
+        <p>Nous avons également des concurrents indirects :</p>
+        <ul>
+          <li><a href="https://get.google.com/trips/">Google Trips</a></li>
+        </ul>
+        <h2>Analyse en détail de PolarSteps, concurrent principal</h2>
+        <p>Fonctionalités :</p>
+        <ul>
+          <li>Possibilité de suivre des personnes</li>
+          <li>Possibilité de partager le voyage des autres</li>
+          <li>On suit le voyage d’une personne avec une timeline</li>
+          <li>On peut liker ou/et commenter une étape</li>
+          <li>Création de livre souvenir</li>
+          <li>Suivi localisation sans internet</li>
+        </ul>
+        <p>Informations globales à propos du voyage :</p>
+        <ul>
+          <li>Pays traversés</li>
+          <li>Nombre de vues du voyage</li>
+          <li>Likes</li>
+          <li>Durée du voyage</li>
+          <li>Nombre de photos</li>
+          <li>Nombre d’étapes</li>
+          <li>Nombres de jour entre 2 étapes</li>
+        </ul>
+        <p>Informations à propos d'une étape</p>
+        <ul>
+          <li>Lieu</li>
+          <li>Pays</li>
+          <li>Date</li>
+          <li>Météo</li>
+          <li>Description</li>
+          <li>Photo(s)</li>
+        </ul>
+      </div>
     </div>
+  </div>
 
-    <div class="row center-xs">
-        <div class="col-xs-12 col-sm-8">
-            <div class="box">
-                <h2>Version 0 :</h2>
-                <ul>
-                    <li>Créer un voyage :
-                        <ul>
-                            <li>Titre et description du voyage</li>
-                            <li>Date de début du voyage</li>
-                            <li>Temps passé sur le voyage</li>
-                            <li>Publication de photo(s) et d'article(s) => Etape avec localisation GPS</li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul>
-                    <li>Créer un profil :
-                        <ul>
-                            <li>Pseudo & Nom, Prénom</li>
-                            <li>Photo</li>
-                            <li>Age</li>
-                            <li>Bio (Optionnel)</li>
-                            <li>Nombres de voyages réalisé (en fonction des données déjà présentes pour l'utilisateur)</li>
-                            <li>Titre du voyage en cours (si voyage en cours)</li>
-                            <li>Personnes suivies</li>
-                        </ul>
-                    </li>
-                </ul>
+  <div class="row center-xs">
+    <div class="col-xs-12 col-sm-8">
+      <div class="box">
+        <h2>Version 0 :</h2>
+        <ul>
+          <li>Créer un voyage :
+            <ul>
+              <li>Titre et description du voyage</li>
+              <li>Date de début du voyage</li>
+              <li>Temps passé sur le voyage</li>
+              <li>Publication de photo(s) et d'article(s) => Etape avec localisation GPS</li>
+            </ul>
+          </li>
+        </ul>
+        <ul>
+          <li>Créer un profil :
+            <ul>
+              <li>Pseudo & Nom, Prénom</li>
+              <li>Photo</li>
+              <li>Age</li>
+              <li>Bio (Optionnel)</li>
+              <li>Nombres de voyages réalisé (en fonction des données déjà présentes pour l'utilisateur)</li>
+              <li>Titre du voyage en cours (si voyage en cours)</li>
+              <li>Personnes suivies</li>
+            </ul>
+          </li>
+        </ul>
 
-                <h3>[versions futures / à approfondir]</h3>
+        <h3>[versions futures / à approfondir]</h3>
 
-                <h3>V1 :</h3>
-                <ul>
-                    <li>Tracé GPS en temps réel</li>
-                    <li>Mode privé & mode publique</li>
-                    <li>Mode groupe (ex: sortie scolaire)</li>
-                </ul>
+        <h3>V1 :</h3>
+        <ul>
+          <li>Tracé GPS en temps réel</li>
+          <li>Mode privé & mode publique</li>
+          <li>Mode groupe (ex: sortie scolaire)</li>
+        </ul>
 
-                <h3>V2 :</h3>
-                <ul>
-                    <li>Mode discover</li>
-                </ul>
-                
-            </div>
-        </div>
+        <h3>V2 :</h3>
+        <ul>
+          <li>Mode discover</li>
+        </ul>
+
+      </div>
     </div>
+  </div>
 
-    <div class="row center-xs">
-            <div class="col-xs-12 col-sm-8">
-                <div class="box">
-                    <h2>Quelques idées en vrac :</h2>
+  <div class="row center-xs">
+    <div class="col-xs-12 col-sm-8">
+      <div class="box">
+        <h2>Quelques idées en vrac :</h2>
 
-                    <h3>Tech :</h3>
-                    <ul>
-                        <li>API :</li>
-                        <ul>
-                            <li>Mapbox</li>
-                            <li>Instagram</li>
-                            <li>Flickr</li>
-                        </ul>
-                        <li>Développement :</li>
-                        <ul>
-                            <li>C#</li>
-                            <li>Framework Xamarin (multi-plateforme)</li>
-                        </ul>
-                    </ul>
+        <h3>Tech :</h3>
+        <ul>
+          <li>API :</li>
+          <ul>
+            <li>Mapbox</li>
+            <li>Instagram</li>
+            <li>Flickr</li>
+          </ul>
+          <li>Développement :</li>
+          <ul>
+            <li>C#</li>
+            <li>Framework Xamarin (multi-plateforme)</li>
+          </ul>
+        </ul>
 
-                    <h3>Business Model :</h3>
-                    <ul>
-                        <li>Vente de livre retraçant le voyage</li>
-                        <li>Vente d’objet lié aux voyages (lien affilié)</li>
-                        <li>Compte premium</li>
-                    </ul>
+        <h3>Business Model :</h3>
+        <ul>
+          <li>Vente de livre retraçant le voyage</li>
+          <li>Vente d’objet lié aux voyages (lien affilié)</li>
+          <li>Compte premium</li>
+        </ul>
 
-                </div>
-            </div>
-        </div>
-    
+      </div>
+    </div>
+  </div>
+
+  <div class="row center-xs">
+    <div class="col-xs-12 col-sm-8">
+      <div class="box">
+        <h2>Travail accompli</h2>
+
+        <h3>Lundi 7 Janvier 2019</h3>
+        <ul>
+          <li>Lucas Duval</li>
+          <ul>
+            <li>Réfléxion autour du nom de l'application</li>
+          </ul>
+          <li>Pierre Moinet</li>
+          <ul>
+            <li>Développement</li>
+          </ul>
+          <li>Adrien Sanuy-Munoz</li>
+          <ul>
+            <li>Réfléxion autour du nom de l'application</li>
+          </ul>
+          <li>Steven Roussel</li>
+          <ul>
+            <li>Modification du site du projet tutoré</li>
+            <li>Réfléxion autour du nom de l'application</li>
+          </ul>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+
+
 </body>
+
 </html>
