Mise à jour du 7 Janvier
Mise à jour des différents travaux effectué aujourd'hui.
Ajout de différentes descriptions pour les versions.
Ajout du Logo de l'application.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Follow my trip - Projet TUT</title>
+  <title>GeoTrip - Projet TUT</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:200|Nunito+Sans" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-  <h1>Follow my trip</h1>
+  <img src="img/logo.png" alt"">
   <div class="row center-xs">
     <div class="col-xs-12 col-sm-8">
       <div class="box">
@@ -95,6 +94,10 @@
           <li>Description</li>
           <li>Photo(s)</li>
         </ul>
+        <h2>Find Penguins, une copie de PolarSteps</h2>
+        <p>Find Penguins reprend le même "Business Model" que PolarSteps ainsi que toutes ces fonctionalités.</p>
+        <h2>Analyse GoogleTrips</h2>
+        <p><i>En cours.</i></p>
       </div>
     </div>
   </div>
@@ -103,6 +106,10 @@
     <div class="col-xs-12 col-sm-8">
       <div class="box">
         <h2>Version 0 :</h2>
+        <h4>Description</h4>
+        <p>GeoTrip est une application de partage, de découverte et de voyage.<br>
+          À partir d’un principe de géolocalisation, l’application retracera votre parcours durant vos vacances ou vos Roadtrip. Vous pourrez publier des articles, photos, vidéos, ou encore placer sur la carte des points correspondants à des lieux
+          incontournables que vous aurez eu la chance de rencontrer.</p>
         <ul>
           <li>Créer un voyage :
             <ul>
@@ -130,6 +137,10 @@
         <h3>[versions futures / à approfondir]</h3>
 
         <h3>V1 :</h3>
+        <h4>Description</h4>
+        <p>Dès lors que vous partirez dans vos périples, l’application vous suivra en temps réel et vous proposera des lieux à voir lorsque vous passerez près d’eux. Tout cela est représenté sur une carte, vous pourrez, à la manière d’un GPS, vous
+          repérez sur cette dernière et poser vos marques pour conseiller aux autres utilisateurs des lieux incontournables que vous avez rencontrés. vous pourrez également suivre et être suivis par d’autres utilisateurs passionnés de roadtrips. Il
+          est également possible de garder vos voyages pour vous ou vos contacts uniquement en mode privé ou au contraire, les publiés au monde entier grâce au mode public.</p>
         <ul>
           <li>Tracé GPS en temps réel</li>
           <li>Mode privé & mode publique</li>
@@ -137,6 +148,10 @@
         </ul>
 
         <h3>V2 :</h3>
+        <h4>Description</h4>
+        <p>Dans cette nouvelle version, vous pourrez découvrir les voyages de plusieurs inconnus sur des régions que vous comptez visiter, prenez part à une pré-découverte de vos parcours de vacances. Découvrez des lieux incontournables que les
+          utilisateurs ont trouvés bon de spécifier. Sublimez vos découvertes grâce à GeoTrip, créer votre souvenir de vacances en temps réel et partagez le pour que d’autres utilisateurs puissent vivre le même rêve que vous. Autant sous forme
+          d’application mobile que d’application web, GeoTrip pourra être accessible sur toutes vos plateformes, vous permettant d’actualiser et de tenir à jour vos roadtrips à tout moment. </p>
         <ul>
           <li>Mode discover</li>
         </ul>
@@ -160,12 +175,11 @@
           </ul>
           <li>Développement :</li>
           <ul>
-            <li>C#</li>
-            <li>Framework Xamarin (multi-plateforme)</li>
+            <li>Ruby On Rails</li>
           </ul>
         </ul>
 
-        <h3>Business Model :</h3>
+        <h3>Business Model : <i>(A développer)</i></h3>
         <ul>
           <li>Vente de livre retraçant le voyage</li>
           <li>Vente d’objet lié aux voyages (lien affilié)</li>
@@ -183,22 +197,33 @@
 
         <h3>Lundi 7 Janvier 2019</h3>
         <ul>
-          <li>Lucas Duval</li>
+          <li><b>Lucas Duval</b></li>
           <ul>
-            <li>Réfléxion autour du nom de l'application</li>
+            <p>
+              J’ai écrit les descriptifs de l’application, et également pour les plusieurs versions du projet, expliquer le travail qui sera disponible sur chacune des versions.<br>
+              J’ai également travailler sur la création d’un faux profil pour la démonstration de l’application, j’ai gérer la gestion de projet sur un trello.<br>
+              J’ai apporté mon assistance à Adrien pour la création du logo, j’ai participé à la réflexion du nom et de la baseline.
+            </p>
           </ul>
-          <li>Pierre Moinet</li>
+          <li><b>Pierre Moinet</b></li>
           <ul>
-            <li>Développement</li>
+            <p><i>Pierre n'a pas encore rédigé son résumé</i></p>
           </ul>
-          <li>Adrien Sanuy-Munoz</li>
+          <li><b>Adrien Sanuy-Munoz</b></li>
           <ul>
-            <li>Réfléxion autour du nom de l'application</li>
+            <p>
+              J’ai réalisé le logo de GeoTrip en m’aidant de mots-clés (Terre, montagne, soleil, avion, océan, sculpture, etc…).<br>
+              J’ai utilisé des couleurs sobre, dont le bleu pour représenter la mer, le calme, la sérénité; mais aussi le rose, qui inspire le dynamisme.
+            </p>
           </ul>
-          <li>Steven Roussel</li>
+          <li><b>Steven Roussel</b></li>
           <ul>
-            <li>Modification du site du projet tutoré</li>
-            <li>Réfléxion autour du nom de l'application</li>
+            <p>
+              Durant la journée, j'ai participé à la réflexion commune avec Adrien et Lucas sur le nom de notre application, la BaseLine ou encore le nom de domaine que nous allions utiliser.<br>
+              J'ai également créé un profil type d'utilisateur et commencé à rédiger un voyage afin d'avoir un contenu à "rentrer" de base dans notre application.
+              <br>Pour finir, j'ai réalisé quelques recherches concernant des partenariats & des moyens de communiquer sur notre produit.<br>
+              <i>Je mets également à jour ce site avec Pierre [Push visible sur GitHub].</i>
+            </p>
           </ul>
         </ul>
 
