Rajout de Résumé
Rajout du résumé de Pierre pour le 7 Janvier.

--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@
           </ul>
           <li><b>Pierre Moinet</b></li>
           <ul>
-            <p><i>Pierre n'a pas encore rédigé son résumé</i></p>
+            <p>Aujourd’hui j’ai commencé le développement sur Ruby on Rails.<br>J’ai mis en place le système de voyage et d’étapes, ainsi que les utilisateurs.<br>J’ai également travaillé sur un système d’upload d’images en utilisant Cloudinary
+              (système de Cloud).
+            </p>
           </ul>
           <li><b>Adrien Sanuy-Munoz</b></li>
           <ul>
