--- a/index.html
+++ b/index.html
@@ -229,6 +229,34 @@
           </ul>
         </ul>
 
+        <h3>Mardi 8 Janvier 2019</h3>
+        <ul>
+          <li><b>Lucas Duval</b></li>
+          <ul>
+            <p>
+              <i>À compléter</i>
+            </p>
+          </ul>
+          <li><b>Pierre Moinet</b></li>
+          <ul>
+            <p>
+              <i>À compléter</i>
+            </p>
+          </ul>
+          <li><b>Adrien Sanuy-Munoz</b></li>
+          <ul>
+            <p>
+              <i>À compléter</i>
+            </p>
+          </ul>
+          <li><b>Steven Roussel</b></li>
+          <ul>
+            <p>
+              <i>À compléter</i>
+            </p>
+          </ul>
+        </ul>
+
       </div>
     </div>
   </div>
