Analyse de Concurrent(s)
Fin de l'analyse de Google Trip.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@
         <h2>Find Penguins, une copie de PolarSteps</h2>
         <p>Find Penguins reprend le même "Business Model" que PolarSteps ainsi que toutes ces fonctionalités.</p>
         <h2>Analyse GoogleTrips</h2>
-        <p><i>En cours.</i></p>
+        <p>Fonctionalités :</p>
+        <ul>
+          <li>Organiser son voyage (<i>Checkpoint sur une carte Google Maps</i>)</li>
+          <li>Trouver des activités à réaliser durant son voyage (<i>Via Google Maps [Notes, avis...]</i>)</li>
+          <li>Regrouper les Informations liées à son voyage (<i>Billet d'avions, adresses et lieux enregistrés [Utilise les données Gmail de l'utilisateur]</i>)</li>
+          <li>Mode Hors-Ligne</li>
+        </ul>
       </div>
     </div>
   </div>
