--- a/index.html
+++ b/index.html
@@ -19,19 +19,26 @@
         <div class="row team">
           <div class="col-xs-6 col-sm-3">
             <img src="img/adrien.jpg" alt="">
-            <p>Adrien Sanuy-Munoz</p>
+            <p>Adrien Sanuy-Munoz<br>
+              <a href="mailto:adrien.sanuy@mmibordeaux.com">Mail d'Adrien</a></p>
           </div>
           <div class="col-xs-6 col-sm-3">
             <img src="img/lucas.jpg" alt="">
-            <p>Lucas Duval</p>
+            <p>Lucas Duval<br>
+              <a href="mailto:lucas.duval@mmibordeaux.com">Mail de Lucas</a>
+            </p>
           </div>
           <div class="col-xs-6 col-sm-3">
             <img src="img/steven.jpg" alt="">
-            <p>Steven Roussel</p>
+            <p>Steven Roussel<br>
+              <a href="mailto:steven.roussel@mmibordeaux.com">Mail de Steven</a>
+            </p>
           </div>
           <div class="col-xs-6 col-sm-3">
             <img src="img/pierre.jpg" alt="">
-            <p>Pierre Moinet</p>
+            <p>Pierre Moinet<br>
+              <a href="mailto:pierre.moinet@mmibordeaux.com">Mail de Pierre</a>
+            </p>
           </div>
         </div>
       </div>
@@ -199,6 +206,42 @@
   <div class="row center-xs">
     <div class="col-xs-12 col-sm-8">
       <div class="box">
+        <h2>Nos envies suite au projet</h2>
+
+        <ul>
+          <li><b>Lucas Duval</b></li>
+
+          <p>
+            Je souhaite pouvoir mettre sur mon C.V. le fait que j’ai eu l’occasion de faire la communication au sein d’un domaine professionnel.<br>
+            Pouvoir améliorer ma vision graphique quant au poster et pouvoir m’améliorer sur des compétences en audiovisuel sur le secteur de la publicité car c’est vers ce domaine que je compte m’orienter dans l’avenir.
+          </p>
+
+          <li><b>Pierre Moinet</b></li>
+          <p>
+            Je souhaite pouvoir rajouter ce projet à mon CV, augmenter mes compétences en Ruby on Rails et sur l’API MapBox.
+          </p>
+
+          <li><b>Adrien Sanuy-Munoz</b></li>
+          <p>
+            Je souhaite approfondir mes compétences dans l’UX/UI en terme d’application mobile.
+          </p>
+
+          <li><b>Steven Roussel</b></li>
+          <p>
+            Ce projet me tient vraiment à coeur.<br>
+            J’aime énormément la thématique du voyage (je veux travailler dans ce secteur plus tard [Journalisme / Reportage]) et ce projet peut m’apporter une porte d’entrée dans ce secteur ainsi qu’une certaine satisfaction personnel en général à
+            travailler sur ce sujet.<br>
+            En ce qui concerne les compétences, je souhaite mettre en avant mes qualités en terme de communiquant et dans le relationnel.
+          </p>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="row center-xs">
+    <div class="col-xs-12 col-sm-8">
+      <div class="box">
         <h2>Travail accompli</h2>
 
         <h3>Lundi 7 Janvier 2019</h3>
@@ -213,7 +256,9 @@
           </ul>
           <li><b>Pierre Moinet</b></li>
           <ul>
-            <p>Aujourd’hui j’ai commencé le développement sur Ruby on Rails.<br>J’ai mis en place le système de voyage et d’étapes, ainsi que les utilisateurs.<br>J’ai également travaillé sur un système d’upload d’images en utilisant Cloudinary
+            <p>Aujourd’hui j’ai commencé le développement sur Ruby on Rails.<br>
+              J’ai mis en place le système de voyage et d’étapes, ainsi que les utilisateurs.<br>
+              J’ai également travaillé sur un système d’upload d’images en utilisant Cloudinary
               (système de Cloud).
             </p>
           </ul>
@@ -240,25 +285,32 @@
           <li><b>Lucas Duval</b></li>
           <ul>
             <p>
-              <i>À compléter</i>
+              Aujourd’hui j’ai travailler sur le poster et l’affiche pédagogique.<br>
+              J’ai également travaillé avec Adrien sur les maquettes de l’application web.<br>
+              J’ai aussi répertorié plusieurs mots clés autour de GeoTrip.<br>
+              Il me reste le macro planning et les budgets à faire demain.
             </p>
           </ul>
           <li><b>Pierre Moinet</b></li>
           <ul>
             <p>
-              <i>À compléter</i>
-            </p>
+              Aujourd’hui j’ai peaufiné l’utilisateur en ajoutant la possibilité d’avoir une photo de profil, nom, prénom, date de naissance.<br>
+              J’ai également retravailler l’architecture pour que les voyages des utilisateurs et les voyages des autres utilisateurs soient bien séparés.<br>
+              J’ai essayé de mettre l’app en production sur heroku mais cela n’a pas marché à cause de plusieurs bugs que je dois donc résoudre.</p>
           </ul>
           <li><b>Adrien Sanuy-Munoz</b></li>
           <ul>
             <p>
-              <i>À compléter</i>
+              Aujourd’hui j’ai commencé à réaliser la maquette mobile en respectant la charte graphique.<br>
+              La maquette est un mélange entre Twitter, Instagram et Behance.
             </p>
           </ul>
           <li><b>Steven Roussel</b></li>
           <ul>
             <p>
-              <i>À compléter</i>
+              Aujourd’hui j’ai travaillé sur le site du projet (HTML/CSS), j’ai fini l’analyse de la concurrence, j’ai également réalisé une affiche promotionnel pour l’application et ai commencé celle destinée à l’équipe pédagogique.<br>
+              En parallèle, j’ai également aidé Adrien sur les maquettes (surtout pour donner mon avis et certaines directives) et ai pris contact avec un potentiel ambassadeur pour l’application.<br>
+              <i>Je mets également à jour ce site avec Pierre [Push visible sur GitHub].</i>
             </p>
           </ul>
         </ul>
