--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         <h2>Analyse de la concurrence</h2>
         <p>Les principaux concurrents sont :</p>
         <ul>
-          <li><a href="https://www.polarsteps.com/">Polarsteps</a></li>
-          <li><a href="https://findpenguins.com/">Find Penguins</a></li>
+          <li><a href="https://www.polarsteps.com/" target="_blank">Polarsteps</a></li>
+          <li><a href="https://findpenguins.com/" target="_blank">Find Penguins</a></li>
         </ul>
         <p>Nous avons également des concurrents indirects :</p>
         <ul>
-          <li><a href="https://get.google.com/trips/">Google Trips</a></li>
+          <li><a href="https://get.google.com/trips/" target="_blank">Google Trips</a></li>
         </ul>
         <h2>Analyse en détail de PolarSteps, concurrent principal</h2>
         <p>Fonctionalités :</p>
@@ -320,7 +320,7 @@
           <li><b>Lucas Duval</b></li>
           <ul>
             <p>
-              Je me suis chargé de créer les réseaux sociaux. J’ai également établi le <a href="https://docs.google.com/spreadsheets/d/17p14gZcdUPcXGwXmsB4prOhzcHlqXNzuvCngGHwsk2o/edit?usp=sharing">cahier des charges</a> ce matin.<br>
+              Je me suis chargé de créer les réseaux sociaux. J’ai également établi le <a href="https://docs.google.com/spreadsheets/d/17p14gZcdUPcXGwXmsB4prOhzcHlqXNzuvCngGHwsk2o/edit?usp=sharing" target="_blank">cahier des charges</a> ce matin.<br>
               Nous avons, avec Steven, réfléchis au Layout du poster pour l’équipe pédagogique, qui est bientôt terminé.<br>
               Et j’ai également aidé Adrien à finaliser les maquettes.<br>
               Et nous avons commencé à réfléchir sur la vidéo (l’organisation des images, motions, mockup, durée…).
@@ -337,15 +337,15 @@
           <ul>
             <p>
               J’ai effectué une réflexion sur l’utilisation de l’application.<br>
-              J’ai ensuite fini <a href="https://xd.adobe.com/spec/53e1fa60-6367-43de-5501-92cc749a7175-25d0/">les maquettes</a>, rangé les icônes & images dans un dossier afin que le développeur [Pierre] puisse commencer la réalisation du front et que Steven puisse réaliser des Mock-Up pour les poster.
+              J’ai ensuite fini <a href="https://xd.adobe.com/spec/53e1fa60-6367-43de-5501-92cc749a7175-25d0/" target="_blank">les maquettes</a>, rangé les icônes & images dans un dossier afin que le développeur [Pierre] puisse commencer la réalisation du front et que Steven puisse réaliser des Mock-Up pour les poster.
             </p>
           </ul>
           <li><b>Steven Roussel</b></li>
           <ul>
             <p>
-              Au cours de la journée, j’ai réalisé <a href="https://drive.google.com/drive/folders/1gZs2_leDVO-li4kP6uwxdqOCsfP1hjNx?usp=sharing">deux posters en A3 (Affiche de publicité ainsi qu’une affiche dédiée à l’équipe pédagogique)</a>.<br>
+              Au cours de la journée, j’ai réalisé <a href="https://drive.google.com/drive/folders/1gZs2_leDVO-li4kP6uwxdqOCsfP1hjNx?usp=sharing" target="_blank">deux posters en A3 (Affiche de publicité ainsi qu’une affiche dédiée à l’équipe pédagogique)</a>.<br>
               J’ai également contacté différentes relations et organismes afin de réaliser d’éventuelles partenariat (Offices de Tourisme [Bordeaux, Saint-Nazaire, Nantes], Influenceurs [Jonathan Bertin, Simon Puech, Maxime Horlaville] …).<br>
-              Cette nuit j’ai donc réalisé un partenariat avec <a href="instagram.com/mxhpics">Maxime Horlaville, un influenceur (10k abonnés sur Instagram)</a> qui travaille en temps que vidéaste sur l’expédition <a href="https://www.underthepole.com">Under The Pole</a>.<br>
+              Cette nuit j’ai donc réalisé un partenariat avec <a href="https://instagram.com/mxhpics" target="_blank">Maxime Horlaville, un influenceur (10k abonnés sur Instagram)</a> qui travaille en temps que vidéaste sur l’expédition <a href="https://www.underthepole.com">Under The Pole</a>.<br>
               <i>Je mets également à jour ce site avec Pierre [Push visible sur GitHub].</i>
             </p>
           </ul>
@@ -362,19 +362,19 @@
 
         <h3>Le Site</h3>
           <ul>
-            <li><a href="https://xd.adobe.com/spec/53e1fa60-6367-43de-5501-92cc749a7175-25d0/">Maquette</a></li>
-            <li><a href="geotripapp.herokuapp.com">Site Internet</a></li>
+            <li><a href="https://xd.adobe.com/spec/53e1fa60-6367-43de-5501-92cc749a7175-25d0/" target="_blank">Maquette</a></li>
+            <li><a href="https://geotripapp.herokuapp.com" target="_blank">Site Internet</a></li>
           </ul>
           <h3>Les Affiches</h3>
             <ul>
-              <li><a href="./img/pub.jpg">Affiche de Publicité</a></li>
-              <li><a href="./img/pedago.png">Infographie</a></li>
+              <li><a href="./img/pub.jpg" target="_blank">Affiche de Publicité</a></li>
+              <li><a href="./img/pedago.png" target="_blank">Infographie</a></li>
             </ul>
             <h3>Autre(s)</h3>
             <ul>
-              <li><a href="https://docs.google.com/spreadsheets/d/17p14gZcdUPcXGwXmsB4prOhzcHlqXNzuvCngGHwsk2o/edit?usp=sharing">Macro-planning</a></li>
-              <li><a href="./img/logo.png">Logo</a></li>
-              <li><a href="instagram.com/mxhpics">Instagram Maxime Horlaville</a></li>
+              <li><a href="https://docs.google.com/spreadsheets/d/17p14gZcdUPcXGwXmsB4prOhzcHlqXNzuvCngGHwsk2o/edit?usp=sharing" target="_blank">Macro-planning</a></li>
+              <li><a href="./img/logo.png" target="_blank">Logo</a></li>
+              <li><a href="https://www.instagram.com/mxhpics" target="_blank">Instagram Maxime Horlaville</a></li>
             </ul>
 
       </div>
