--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-  <img src="img/logo.png" alt"">
+  <div class="row center-xs">
+  <img class="logo" src="img/logo.png" alt"">
+  <style type="text/css">
+  .logo {
+  max-width : 21rem;
+  max-height: 6rem;
+  }
+  </style>
+</div>
   <div class="row center-xs">
     <div class="col-xs-12 col-sm-8">
       <div class="box">
