--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
   <div class="row center-xs">
-  <img class="logo" src="img/logo.png" alt"">
-  <style type="text/css">
-  .logo {
-  max-width : 21rem;
-  max-height: 6rem;
-  }
-  </style>
-</div>
+    <img class="logo" src="img/logo.png" alt"">
+    <style type="text/css">
+      .logo {
+        max-width: 21rem;
+        max-height: 6rem;
+      }
+    </style>
+  </div>
   <div class="row center-xs">
     <div class="col-xs-12 col-sm-8">
       <div class="box">
@@ -43,7 +43,7 @@
             </p>
           </div>
           <div class="col-xs-6 col-sm-3">
-            <img src="img/pierre.jpg" alt="">
+            <img src="img/Pierre.jpg" alt="">
             <p>Pierre Moinet<br>
               <a href="mailto:pierre.moinet@mmibordeaux.com">Mail de Pierre</a>
             </p>
@@ -62,7 +62,8 @@
         <p>L’utilisateur pourrait également préparer son voyage (carte, rappels, produits utiles / indispensables proposés).</p>
         <p>Nous allons également intégrer un côté communautaire, l’idée serait de pouvoir suivre des personnes (follow de différents comptes), rejoindre des personnes (groupe, proposition de “meet-up” …) et de permettre aux utilisateurs de gérer
           tout ceci de façon simple (compte privé permettant de partager son voyage uniquement avec quelques personnes ou compte public).</p>
-        <p>On pourra créer des groupes, ceux-ci permettront d’inclure différentes personnes dans notre voyage.</p>
+        <p>On pourra créer des groupes, ceux-ci permettront d’inclure différentes personnes dans notre voyage.<br></p>
+        <img src="./img/pedago.jpg" alt="">
       </div>
     </div>
   </div>
@@ -337,23 +338,26 @@
           <li><b>Pierre Moinet</b></li>
           <ul>
             <p>
-               J’ai passé la majeure partie de la journée à résoudre un problème de mise en production avec heroku, et j’ai donc refait une grande partie de toute l’application, en revoyant certains points.<br>
-               J’ai commencé l’intégration front-end de la page de connexion.
-             </p>
+              J’ai passé la majeure partie de la journée à résoudre un problème de mise en production avec heroku, et j’ai donc refait une grande partie de toute l’application, en revoyant certains points.<br>
+              J’ai commencé l’intégration front-end de la page de connexion.
+            </p>
           </ul>
           <li><b>Adrien Sanuy-Munoz</b></li>
           <ul>
             <p>
               J’ai effectué une réflexion sur l’utilisation de l’application.<br>
-              J’ai ensuite fini <a href="https://xd.adobe.com/spec/53e1fa60-6367-43de-5501-92cc749a7175-25d0/" target="_blank">les maquettes</a>, rangé les icônes & images dans un dossier afin que le développeur [Pierre] puisse commencer la réalisation du front et que Steven puisse réaliser des Mock-Up pour les poster.
+              J’ai ensuite fini <a href="https://xd.adobe.com/spec/53e1fa60-6367-43de-5501-92cc749a7175-25d0/" target="_blank">les maquettes</a>, rangé les icônes & images dans un dossier afin que le développeur [Pierre] puisse commencer la
+              réalisation du front et que Steven puisse réaliser des Mock-Up pour les poster.
             </p>
           </ul>
           <li><b>Steven Roussel</b></li>
           <ul>
             <p>
-              Au cours de la journée, j’ai réalisé <a href="https://drive.google.com/drive/folders/1gZs2_leDVO-li4kP6uwxdqOCsfP1hjNx?usp=sharing" target="_blank">deux posters en A3 (Affiche de publicité ainsi qu’une affiche dédiée à l’équipe pédagogique)</a>.<br>
+              Au cours de la journée, j’ai réalisé <a href="https://drive.google.com/drive/folders/1gZs2_leDVO-li4kP6uwxdqOCsfP1hjNx?usp=sharing" target="_blank">deux posters en A3 (Affiche de publicité ainsi qu’une affiche dédiée à l’équipe
+                pédagogique)</a>.<br>
               J’ai également contacté différentes relations et organismes afin de réaliser d’éventuelles partenariat (Offices de Tourisme [Bordeaux, Saint-Nazaire, Nantes], Influenceurs [Jonathan Bertin, Simon Puech, Maxime Horlaville] …).<br>
-              Cette nuit j’ai donc réalisé un partenariat avec <a href="https://instagram.com/mxhpics" target="_blank">Maxime Horlaville, un influenceur (10k abonnés sur Instagram)</a> qui travaille en temps que vidéaste sur l’expédition <a href="https://www.underthepole.com">Under The Pole</a>.<br>
+              Cette nuit j’ai donc réalisé un partenariat avec <a href="https://instagram.com/mxhpics" target="_blank">Maxime Horlaville, un influenceur (10k abonnés sur Instagram)</a> qui travaille en temps que vidéaste sur l’expédition <a href="https://www.underthepole.com"
+                target="_blank">Under The Pole</a>.<br>
               <i>Je mets également à jour ce site avec Pierre [Push visible sur GitHub].</i>
             </p>
           </ul>
@@ -369,21 +373,21 @@
         <h2>Quelques liens :</h2>
 
         <h3>Le Site</h3>
-          <ul>
-            <li><a href="https://xd.adobe.com/spec/53e1fa60-6367-43de-5501-92cc749a7175-25d0/" target="_blank">Maquette</a></li>
-            <li><a href="https://geotripapp.herokuapp.com" target="_blank">Site Internet</a></li>
-          </ul>
-          <h3>Les Affiches</h3>
-            <ul>
-              <li><a href="./img/pub.jpg" target="_blank">Affiche de Publicité</a></li>
-              <li><a href="./img/pedago.png" target="_blank">Infographie</a></li>
-            </ul>
-            <h3>Autre(s)</h3>
-            <ul>
-              <li><a href="https://docs.google.com/spreadsheets/d/17p14gZcdUPcXGwXmsB4prOhzcHlqXNzuvCngGHwsk2o/edit?usp=sharing" target="_blank">Macro-planning</a></li>
-              <li><a href="./img/logo.png" target="_blank">Logo</a></li>
-              <li><a href="https://www.instagram.com/mxhpics" target="_blank">Instagram Maxime Horlaville</a></li>
-            </ul>
+        <ul>
+          <li><a href="https://xd.adobe.com/spec/53e1fa60-6367-43de-5501-92cc749a7175-25d0/" target="_blank">Maquette</a></li>
+          <li><a href="https://geotripapp.herokuapp.com" target="_blank">Site Internet</a></li>
+        </ul>
+        <h3>Les Affiches</h3>
+        <ul>
+          <li><a href="./img/pub.jpg" target="_blank">Affiche de Publicité</a></li>
+          <li><a href="./img/pedago.png" target="_blank">Infographie</a></li>
+        </ul>
+        <h3>Autre(s)</h3>
+        <ul>
+          <li><a href="https://docs.google.com/spreadsheets/d/17p14gZcdUPcXGwXmsB4prOhzcHlqXNzuvCngGHwsk2o/edit?usp=sharing" target="_blank">Macro-planning</a></li>
+          <li><a href="./img/logo.png" target="_blank">Logo</a></li>
+          <li><a href="https://www.instagram.com/mxhpics" target="_blank">Instagram Maxime Horlaville</a></li>
+        </ul>
 
       </div>
     </div>
