Intégration d'une nouvelle rubrique
Intégration d'une rubrique concernant l'ambassadeur.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,27 @@
       </div>
     </div>
   </div>
+</div>
+
+<div class="row center-xs">
+  <div class="col-xs-12 col-sm-8">
+    <div class="box">
+      <h2>Un Ambassadeur</h2>
+      <div class="row team">
+        <div class="col-xs-6 col-sm-3">
+          <img src="img/maxime.jpg" alt="">
+        </div>
+        <div class="col-xs-3 col-sm-9" class="video">
+        <iframe width="100%" height=360rem src="https://www.youtube.com/embed/BOHINHWd-4M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      </div>
+    </div>
+    <h3>Maxime Horlaville (@mxhpics)</h3>
+      <p><a href="mailto:hlvm@live.fr">Mail de Maxime</a> - 
+      <a href="https://www.instagram.com/mxhpics" target="_blank">Instagram de Maxime</a>
+  </p>
+  </div>
+</div>
 
   <div class="row center-xs">
     <div class="col-xs-12 col-sm-8">
