Résumé du Jeudi 10 Janvier
Intégration du résumé du travail du Jeudi 10 Janvier.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="row team">
           <div class="col-xs-6 col-sm-3">
             <img src="img/adrien.jpg" alt="">
-            <p>Adrien Sanuy-Munoz<br>
+            <p>Adrien Sanuy-Muñoz<br>
               <a href="mailto:adrien.sanuy@mmibordeaux.com">Mail d'Adrien</a></p>
           </div>
           <div class="col-xs-6 col-sm-3">
@@ -52,27 +52,27 @@
       </div>
     </div>
   </div>
-</div>
-
-<div class="row center-xs">
-  <div class="col-xs-12 col-sm-8">
-    <div class="box">
-      <h2>Un Ambassadeur</h2>
-      <div class="row team">
-        <div class="col-xs-6 col-sm-3">
-          <img src="img/maxime.jpg" alt="">
-        </div>
-        <div class="col-xs-3 col-sm-9" class="video">
-        <iframe width="100%" height=360rem src="https://www.youtube.com/embed/BOHINHWd-4M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      </div>
-    </div>
-    <h3>Maxime Horlaville (@mxhpics)</h3>
-      <p><a href="mailto:hlvm@live.fr">Mail de Maxime</a> - 
-      <a href="https://www.instagram.com/mxhpics" target="_blank">Instagram de Maxime</a>
-  </p>
   </div>
-</div>
+
+  <div class="row center-xs">
+    <div class="col-xs-12 col-sm-8">
+      <div class="box">
+        <h2>Un Ambassadeur</h2>
+        <div class="row team">
+          <div class="col-xs-6 col-sm-3">
+            <img src="img/maxime.jpg" alt="">
+          </div>
+          <div class="col-xs-3 col-sm-9" class="video">
+            <iframe width="100%" height=360rem src="https://www.youtube.com/embed/BOHINHWd-4M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <h3>Maxime Horlaville (@mxhpics)</h3>
+      <p><a href="mailto:hlvm@live.fr">Mail de Maxime</a> -
+        <a href="https://www.instagram.com/mxhpics" target="_blank">Instagram de Maxime</a>
+      </p>
+    </div>
+  </div>
 
   <div class="row center-xs">
     <div class="col-xs-12 col-sm-8">
@@ -84,7 +84,9 @@
         <p>Nous allons également intégrer un côté communautaire, l’idée serait de pouvoir suivre des personnes (follow de différents comptes), rejoindre des personnes (groupe, proposition de “meet-up” …) et de permettre aux utilisateurs de gérer
           tout ceci de façon simple (compte privé permettant de partager son voyage uniquement avec quelques personnes ou compte public).</p>
         <p>On pourra créer des groupes, ceux-ci permettront d’inclure différentes personnes dans notre voyage.<br></p>
+
         <img src="./img/pedago.jpg" alt="">
+
       </div>
     </div>
   </div>
@@ -251,7 +253,7 @@
             Je souhaite pouvoir rajouter ce projet à mon CV, augmenter mes compétences en Ruby on Rails et sur l’API MapBox.
           </p>
 
-          <li><b>Adrien Sanuy-Munoz</b></li>
+          <li><b>Adrien Sanuy-Muñoz</b></li>
           <p>
             Je souhaite approfondir mes compétences dans l’UX/UI en terme d’application mobile.
           </p>
@@ -292,7 +294,7 @@
               (système de Cloud).
             </p>
           </ul>
-          <li><b>Adrien Sanuy-Munoz</b></li>
+          <li><b>Adrien Sanuy-Muñoz</b></li>
           <ul>
             <p>
               J’ai réalisé le logo de GeoTrip en m’aidant de mots-clés (Terre, montagne, soleil, avion, océan, sculpture, etc…).<br>
@@ -328,7 +330,7 @@
               J’ai également retravailler l’architecture pour que les voyages des utilisateurs et les voyages des autres utilisateurs soient bien séparés.<br>
               J’ai essayé de mettre l’app en production sur heroku mais cela n’a pas marché à cause de plusieurs bugs que je dois donc résoudre.</p>
           </ul>
-          <li><b>Adrien Sanuy-Munoz</b></li>
+          <li><b>Adrien Sanuy-Muñoz</b></li>
           <ul>
             <p>
               Aujourd’hui j’ai commencé à réaliser la maquette mobile en respectant la charte graphique.<br>
@@ -383,7 +385,37 @@
             </p>
           </ul>
         </ul>
-
+        <h3>Jeudi 10 Janvier 2019</h3>
+        <ul>
+          <li><b>Lucas Duval</b></li>
+          <ul>
+            <p>
+              J’ai commencé à établir le business model, réfléchir sur les coûts humains et matériels de la création de GeoTrip.<br>
+              J’ai continuer à mettre à jour le planning et la gestion de projet.<br>
+              J’ai également récupéré des séquences et fait un pré-montage de plans pour la vidéo.
+            </p>
+          </ul>
+          <li><b>Pierre Moinet</b></li>
+          <ul>
+            <p>
+              Durant la matinée j'ai intégré l'API MapBox, avec l'ajout d'une map lors de la consultation d'une étape, puis j'ai continué l'intégration et le front-end, j'ai pu avancer sur la page où l'on voit les voyages.
+            </p>
+          </ul>
+          <li><b>Adrien Sanuy-Muñoz</b></li>
+          <ul>
+            <p>
+              J’ai effectué une recherche sur l’utilisation d’une application web (version desktop) et la réalisation de celle-ci.<br>
+              J’ai ensuite commencé la réalisation de la publicité en Motion Design.
+            </p>
+          </ul>
+          <li><b>Steven Roussel</b></li>
+          <ul>
+            <p>
+              J’ai complété le site du Projet Tutoré [<a href="https://github.com/Pir42/projectut">voir Github</a>] ce qui m’a pris beaucoup de temps.<br>
+              J’ai également aidé Lucas pour la vidéo.<br>
+              Pour finir j’ai commencé la réalisation d'un dossier pour recouper toutes les informations concernant le projet.
+            </p>
+          </ul>
       </div>
     </div>
   </div>
